--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -45,8 +45,8 @@ http {
         include /etc/nginx/default.d/*.conf;
 
     	location /api/ {
-        	proxy_pass http://backend:8080/;
-            # proxy_pass http://localhost:8080/;  --- when we use network as host
+        	# proxy_pass http://backend:8080/; --- when we use network as host
+            proxy_pass http://localhost:8080/;  
     	}
     	
     	
