--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ volumes:
   mysql:
 services:
   backend:
-    image: backend:1.0.0
+    image: dheerajamf/backend:1.0.0
     command: sh -c "sleep 5 && node /opt/backend/index.js"
     networks:
     - expense
@@ -12,7 +12,7 @@ services:
     depends_on:
     - mysql
   mysql:
-    image: mysql:1.0.0 
+    image: dheerajamf/mysql:1.0.0 
     networks:
     - expense 
     container_name: mysql
@@ -20,7 +20,7 @@ services:
     - mysql:/var/lib/mysql
 
   frontend:
-    image: frontend:1.0.0
+    image: dheerajamf/frontend:1.0.0
     networks:
     - expense
     container_name: frontend
