--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,12 @@
 # FROM node:20
-FROM node:20.18.3-alpine3.21 
+FROM node:20.18.3-alpine3.21
+RUN addgroup -S expense && adduser -S expense -G expense
+RUN mkdir /opt/backend 
+RUN chown -R expense:expense /opt/backend
 WORKDIR /opt/backend
-COPY package.json .
-COPY *.js .
+COPY package.json ./
+COPY *.js ./
 RUN npm install
-ENV DB_HOST="mysql"   
-# ENV DB_HOST="localhost"    --when we use network as host    
+ENV DB_HOST="mysql"
+USER expense
 CMD ["node", "index.js"]
