--- a/layer-test/Dockerfile
+++ b/layer-test/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /opt/backend
 COPY package.json .
 COPY *.js ./
 RUN npm install
-ENV DB_HOST="mysql"
+# ENV DB_HOST="mysql"
 USER expense
 CMD ["node", "index.js"]
 
